# acpi-notifications

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Notification.h  alsaaudio.cpp  cmake_install.cmake  main.cpp
alsaaudio/: CMakeLists.txt  alsaaudio.cpp  alsaaudio.h
notification/: CMakeLists.txt  notification.h
socket/: CMakeLists.txt  socket.cpp  socket.h
